@@ -3,6 +3,9 @@ Changelog for NICOS 2
 
 **Release 2.1.2**
 
+  - Fixed not being able to run another manualscan after stopping a
+    manualscan.
+
 **Release 2.1.1 (2012-03-22)**
 
   - Fixed an elog bug that caused elog to quit on Unicode errors.
